--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 solution</title>
-	<link rel="stylesheet" href="CSS/makeup.css">
+	<link rel="stylesheet" href="css/makeup.css">
 	<style></style>
 </head>
 <body>
